--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,22 +1,22 @@
 # Plugin name
-name: fuel-plugin-swift
+name: swift
 # Human-readable name for your plugin
-title: Title for fuel-plugin-swift plugin
+title: Plugin for configuring standalone swift cluster
 # Plugin version
 version: '1.0.0'
 # Description
-description: Enable to use plugin X for Neutron
+description: Enable to configure standalone swift cluster
 # Required fuel version
 fuel_version: ['6.1']
 # Specify license of your plugin
 licenses: ['Apache License Version 2.0']
 # Specify author or company name
-authors: ['Specify author or company name']
+authors: ['Serg Shevchenko, Mirantis']
 # A link to the plugin's page
-homepage: 'https://github.com/stackforge/fuel-plugins'
+homepage: 'https://github.com/sheva-serg/fuel-plugin-swift'
 # Specify a group which your plugin implements, possible options:
 # network, storage, storage::cinder, storage::glance, hypervisor
-groups: []
+groups: ['storage']
 
 # The plugin is compatible with releases in the list
 releases:
@@ -25,11 +25,6 @@ releases:
     mode: ['ha', 'multinode']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
-  - os: centos
-    version: 2014.2-6.1
-    mode: ['ha', 'multinode']
-    deployment_scripts_path: deployment_scripts/
-    repository_path: repositories/centos
 
 # Version of plugin package
 package_version: '2.0.0'
