Fix role name in tasks.yaml
Change-Id: I32592477aa6a5466fd1e2b5e11dd214ba8a58f40

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -1,1 +1,7 @@
-# No attributes to change yet
+attributes:
+  test:
+    value: 'test'
+    label: 'test'
+    description: 'test'
+    weight: 10
+    type: "text"
