Add rebalance script and cron job
  - $swift_nodes are only storage nodes now
  - Haproxy on controller nodes has standalone swift as backend so standalone swift works out of box now
  - Add configuration options to Fuel UI

Change-Id: I30f2f4889b06f92d0b5ed4101beb6b794700d3d0

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -1,7 +1,44 @@
 attributes:
-  test:
-    value: 'test'
-    label: 'test'
-    description: 'test'
+  storage_type:
+    value: 'false'
+    label: 'Create and mount loopback devices for swift.'
+    description: 'Protocol (UDP or TCP) used for SNMP communication.'
     weight: 10
+    type: 'radio'
+    values:
+      - data: 'false'
+        label: 'No'
+        description: "No, use partition/device as is."
+      - data: 'loopback'
+        label: 'Yes'
+        description: 'Yes, create and mount loopback devices.'
+  loopback_size:
+    value: '5243780'
+    label: 'Loopback size'
+    description: 'Size of the loopback device to create.'
+    weight: 20
     type: "text"
+    regex:
+      source: '^\d+$'
+      error: "Size should be numeral."
+    restrictions:
+      - condition: settings:swift.storage_type.value != 'loopback'
+        action: hide
+  swift_partition:
+    value: '/var/lib/storage'
+    label: 'Partition'
+    description: 'Partition/device which will be used to store Swift data.'
+    weight: 30
+    type: "text"
+    regex:
+      source: '^\S+$'
+      error: "Path should not be empty."
+  resize_value:
+    value: '2'
+    label: 'Resize value'
+    description: 'Resize value.'
+    weight: 40
+    type: "text"
+    regex:
+      source: '^\d+$'
+      error: "Resize value should be numeral."
