Update Puppet manifests for Fuel 7.0
Change-Id: I7ae0e75bb3829a18f88a55c27085b30773a3e097

--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -1,11 +1,8 @@
 - id: swift-proxy
   type: group
   role: [swift-proxy]
-  tasks:
-    - hiera
-    - globals
   required_for: [deploy_end]
-  requires: [deploy_start]
+  requires: [networking, deploy_start]
   parameters:
     strategy:
       type: parallel
@@ -13,34 +10,38 @@
 - id: primary-swift-proxy
   type: group
   role: [primary-swift-proxy]
-  tasks:
-    - hiera
-    - globals
   required_for: [deploy_end]
-  requires: [deploy_start]
+  requires: [networking, deploy_start]
   parameters:
     strategy:
-      type: parallel
+      type: one_by_one
 
 - id: swift-storage
   type: group
   role: [swift-storage]
-  tasks:
-    - hiera
-    - globals
   required_for: [deploy_end]
-  requires: [deploy_start]
+  requires: [networking, deploy_start]
   parameters:
     strategy:
       type: parallel
 
-- id: swift-deploy
+- id: swift-proxy
   type: puppet
-  groups: [primary-swift-proxy, swift-proxy, swift-storage]
+  groups: [primary-swift-proxy, swift-proxy]
   required_for: [connectivity_tests, deploy_end]
   requires: [netconfig, deploy_start]
   parameters:
-    puppet_manifest: "puppet/manifests/site.pp"
+    puppet_manifest: "puppet/manifests/proxy.pp"
+    puppet_modules: "puppet/modules:/etc/puppet/modules"
+    timeout: 3600
+
+- id: swift-storage
+  type: puppet
+  groups: [swift-storage]
+  required_for: [connectivity_tests, deploy_end]
+  requires: [netconfig, deploy_start]
+  parameters:
+    puppet_manifest: "puppet/manifests/storage.pp"
     puppet_modules: "puppet/modules:/etc/puppet/modules"
     timeout: 3600
 
@@ -48,7 +49,7 @@
   type: puppet
   groups: [primary-controller, controller]
   required_for: [connectivity_tests, deploy_end]
-  requires: [netconfig, deploy_start, swift-deploy]
+  requires: [openstack-controller]
   parameters:
     puppet_manifest: "puppet/manifests/controller.pp"
     puppet_modules: "puppet/modules:/etc/puppet/modules"
