Fix standalone cluster deployment for 6.1
Change-Id: Iaa0c46632555c516c91e3641f3c08808f5fda984

--- a/role_swift-storage.yaml
+++ b/role_swift-storage.yaml
@@ -1,7 +1,7 @@
 meta:
   description: Role assigned to storage nodes of a standalone Swift cluster
   has_primary: false                # whether has primary role or not
-  name: Swift-storage
+  name: Swift storage
   update_required:
   - swift-proxy
 name: swift-storage
