--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -25,7 +25,7 @@ attributes:
       - condition: settings:swift.storage_type.value != 'loopback'
         action: hide
   swift_partition:
-    value: '/var/lib/storage'
+    value: '/var/lib/glance/node'
     label: 'Partition'
     description: 'Partition/device which will be used to store Swift data.'
     weight: 30
