--- a/role_swift-proxy.yaml
+++ b/role_swift-proxy.yaml
@@ -1,7 +1,7 @@
 meta:
   description: Role assigned to proxy nodes of a standalone Swift cluster
   has_primary: true
-  name: Swift-proxy
+  name: Swift proxy
   update_required:
   - controller
 name: swift-proxy 
