--- a/deployment_scripts/standalone_swift/tasks/tasks.yaml
+++ b/deployment_scripts/standalone_swift/tasks/tasks.yaml
@@ -5,7 +5,7 @@
   required_for: [deploy_end]
   requires: [hosts]
   role: [swift-proxy]
-  tasks: [hiera, globals, hosts, firewall, logging, fuel_pkgs, tools]
+  tasks: [fuel_pkgs, hiera, globals, tools, logging, netconfig, hosts, firewall]
   parameters:
     strategy:
       type: parallel
@@ -15,7 +15,7 @@
   required_for: [swift-storage-deploy, deploy_end]
   requires: [hosts]
   role: [primary-swift-proxy]
-  tasks: [hiera, globals, hosts, firewall, logging, fuel_pkgs, tools]
+  tasks: [fuel_pkgs, hiera, globals, tools, logging, netconfig, hosts, firewall]
   parameters:
     strategy:
       type: one_by_one
@@ -25,7 +25,7 @@
   required_for: [deploy_end]
   requires: [hosts]
   role: [swift-storage]
-  tasks: [hiera, globals, hosts, firewall, logging, fuel_pkgs, tools]
+  tasks: [fuel_pkgs, hiera, globals, tools, logging, netconfig, hosts, firewall]
   parameters:
     strategy:
       type: parallel
@@ -35,7 +35,7 @@
 - id: swift-proxy-deploy
   groups: [primary-swift-proxy, swift-proxy]
   required_for: [deploy_end]
-  requires: [hosts]
+  requires: [firewall]
   type: puppet
   parameters:
     puppet_manifest: /etc/puppet/modules/osnailyfacter/modular/standalone_swift/manifests/proxy.pp
@@ -45,7 +45,7 @@
 - id: swift-storage-deploy
   groups: [swift-storage]
   required_for: [deploy_end]
-  requires: [hosts]
+  requires: [firewall]
   type: puppet
   parameters:
     puppet_manifest: /etc/puppet/modules/osnailyfacter/modular/standalone_swift/manifests/storage.pp
